--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "03_03_react-calculator",
+  "name": "react-calculator",
   "private": true,
   "version": "0.1.0",
   "type": "module",
