--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,11 +16,15 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.base.config.ts",
+    "vite.dev.config.ts",
+    "vite.prod.config.ts"
+  ]
 }
