--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite serve -c vite.dev.config.ts",
+    "build": "tsc -b && vite build -c vite.prod.config.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
